// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketStatus component closed ticket 1`] = `
<span
  id="change-status-button"
>
  <button
    aria-disabled="false"
    class="wrapper wrapper small fill primary small"
    type="button"
  >
    <span
      class="content"
    >
      <i
        class="material-icons icon"
      >
        check
      </i>
    </span>
  </button>
</span>
`;

exports[`TicketStatus component open ticket 1`] = `
<span
  id="change-status-button"
>
  <button
    aria-disabled="false"
    class="wrapper fill secondary small"
    type="button"
  >
    <span
      class="content"
    >
      <span
        class="wrapper"
      >
        <i
          class="material-icons icon isLeft small"
        >
          check
        </i>
        Close
      </span>
    </span>
  </button>
</span>
`;
